# merkle-domdiff

./: Cargo.toml  Makefile  README.md
result/: benchmark-20250731_165634.json  benchmark-20250731_171453.json  benchmark-20250731_171511.json  benchmark-20250731_172210.json
snapshots/: v1.html  v10.html  v4.html
snapshots/result/: benchmark-20250731_172131.json  line-diff-20250731_172141.json  run-20250731_155552.json  run-20250731_155811-chunks3.json
src/: main.rs
