[package]
name = "merkle-domdiff"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
lazy_static = "1.4"
